# ProxyClient

./: .editorconfig  .gitmodules  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/source/: basecore.h  baseserver.h  basesession.h  core.cpp  core.h  global.h  main.cpp  process.cpp  process.h  server.cpp  server.h  session.cpp  session.h
common/: CMakeLists.txt
common/include/common/: baseconfig.hpp  objectnames.hpp
redirector/: CMakeLists.txt
redirector/source/: basecore.h  basesocks.h  config.cpp  config.h  core.cpp  core.h  global.h  hook.hpp  main.cpp  sockethook.cpp  sockethook.h  socks4.hpp  socks5.hpp  string.hpp
winpipe/: CMakeLists.txt
winpipe/include/winpipe/: basepipe.hpp  client.hpp  server.hpp
